--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@car_han/cli",
-	"version": "1.0.0",
+	"version": "0.0.0",
 	"description": "CLI to handle some os things quickly.",
 	"main": "lib/src/index.js",
 	"scripts": {
@@ -26,7 +26,7 @@
 		"ts-node": "^10.7.0",
 		"typescript": "^4.6.2"
 	},
-	"types": "lib/src/index.d.ts",
+	"types": "./lib/src/index.d.ts",
 	"bugs": {
 		"url": "https://github.com/hands0meX/template/issues"
 	},
