--- a/lib/package.json
+++ b/lib/package.json
@@ -1,12 +1,12 @@
 {
     "name": "@car_han/cli",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "CLI to handle some os things quickly.",
     "main": "lib/src/index.js",
     "scripts": {
         "debug": "ts-node src/cli.ts",
         "patch": "npm version patch",
-        "upload": "tsc && npm publish",
+        "upload": "npm publish",
         "build": "tsc"
     },
     "repository": {
